--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
+asgiref==3.4.1
+black==21.8b0
+click==8.0.1
+colorama==0.4.4
+dnspython==1.16.0
+email-validator==1.1.3
+fastapi==0.68.1
+Flask==2.0.1
+gunicorn==20.1.0
+h11==0.12.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+mongomock==3.23.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.3.0
 pydantic==1.8.2
 pymongo==3.12.0
+regex==2021.8.28
+sentinels==1.0.0
+six==1.16.0
+starlette==0.14.2
+tomli==1.2.1
+typing-extensions==3.10.0.2
 uvicorn==0.15.0
-pydantic[email]
-fastapi==0.68.1
-dnspython==2.1.0
-werkzeug
+Werkzeug==2.0.1
