--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.4.1
 black==21.8b0
+cffi==1.14.6
 click==8.0.1
 colorama==0.4.4
+cryptography==3.4.8
 dnspython==1.16.0
+ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.68.1
 Flask==2.0.1
@@ -11,14 +14,22 @@ h11==0.12.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jwt==1.2.0
 MarkupSafe==2.0.1
 mongomock==3.23.0
+multipart==0.2.4
 mypy-extensions==0.4.3
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.3.0
+pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.8.2
 pymongo==3.12.0
+python-jose==3.3.0
+python-multipart==0.0.5
 regex==2021.8.28
+rsa==4.7.2
 sentinels==1.0.0
 six==1.16.0
 starlette==0.14.2
